[package]
name = "razel-bzl-starlark"
version = "0.1.0"
edition = "2021"
description = "razelv4 BzlEvaluator impl over starlark-rust (role: impl)."
license = "MIT OR Apache-2.0"

[dependencies]
razel-bzl-api = { path = "../razel-bzl-api", version = "0.1.0" }
# External (non-razel) deps — the wall governs only intra-workspace razel-* edges, not crates.io deps.
starlark = "0.14"
anyhow = "1"        # builtin functions surface errors as `anyhow::Result` (the starlark builtin convention)
allocative = "0.3"  # required derive for custom Starlark values (rule()/attr markers)

[features]
# RED-FIRST: drop the duplicate-target-name guard in the `target()` builtin → the dup-name conformance test
# (a package keyed by name rejects duplicates) must go red.
mutant_package_allow_dup_names = []
# RED-FIRST: a rule-instantiated target drops its rule origin → the analysis link is lost (origin conformance red).
mutant_rule_drops_origin = []
# RED-FIRST: skip attr-schema validation in a rule call → an unknown attribute is silently accepted (red).
mutant_rule_skips_attr_validation = []
# RED-FIRST: skip attr value-TYPE validation → a wrong-typed attr value is silently accepted (red).
mutant_rule_skips_type_validation = []
# RED-FIRST: ignore dependency edges in rule evaluation → providers don't propagate (sum-provider exam red).
mutant_rule_eval_drops_deps = []
# RED-FIRST: skip provider field validation → an undeclared provider field is silently accepted (red).
mutant_provider_skips_field_validation = []
# RED-FIRST: absorb a missing dep label as an empty provider set → a declared dep silently goes unanalyzed (red).
mutant_rule_eval_absorbs_missing_dep = []
# RED-FIRST: drop a rule's declared actions → they never reach execution (action-declaration test red).
mutant_rule_eval_drops_actions = []
# RED-FIRST: dep[Provider] re-keying compares the raw NAME instead of the full ProviderId → a bzl-differing
# identity silently fuses with this module's provider (opaque-comparison conformance red).
mutant_provider_compares_raw_name = []
# RED-FIRST: restore the silent last-wins overwrite for a duplicate same-name provider() declaration
# (dup-declaration conformance red).
mutant_provider_dup_decl_absorbed = []
# RED-FIRST: a rule impl returning two instances of one provider silently merges last-wins instead of
# failing closed with Bazel's error shape (dup-return conformance red).
mutant_rule_result_merges_dup_provider = []
# RED-FIRST (phase-env lockdown §4): collapse the per-phase environments back to the spike's ONE Globals
# served for every phase (one id, one permissive dialect) → one_globals_per_phase_not_conflated (+ the
# phase-separation conformance) must go red.
mutant_one_globals_all_loadkinds = []
# RED-FIRST (phase-env lockdown §4, R1): derive the PredeclaredEnvId from live starlark `Globals` name
# enumeration (heap/seam bytes) instead of the declared razel registry → predeclared_env_id_is_canonical
# must go red.
mutant_env_digest_from_heap_iteration = []
